BF: fix chained sympy schedulers

--- a/master.cfg
+++ b/master.cfg
@@ -73,9 +73,11 @@ from buildbot.schedulers.triggerable import Triggerable
 from buildbot.process.factory import BuildFactory
 from buildbot.steps.source.git import Git
 from buildbot.steps.shell import ShellCommand, SetPropertyFromCommand
+from buildbot.steps.master import SetProperty
 from buildbot.steps.transfer import FileDownload, DirectoryUpload
 from buildbot.steps.trigger import Trigger
 from buildbot.process.properties import Property, Interpolate
+from buildbot.process import properties
 from buildbot.config import BuilderConfig
 
 # This is the dictionary that the buildmaster pays attention to. We also use
@@ -1034,39 +1036,49 @@ for slavenames, bdist_suffix in (
     (xp_32_slaves, '32'),
     (win7_64_slaves, '64')):
     py2_name = 'sympy-bdist{0}-27'.format(bdist_suffix)
-    py3_name = 'sympy-bdist{0}-33'.format(bdist_suffix)
+    py3_sched_name = 'sympy-bdist{0}-33-scheduler'.format(bdist_suffix)
+    py3_build_name = 'sympy-bdist{0}-33-builder'.format(bdist_suffix)
+
     factory = sympy_bot.bdist_factory(
         'exe',
         test_cmd = sympy_test_cmd,
         pip_depends = pip_deps,
         python = r'c:\Python27\python.exe')
+
+    @properties.renderer
+    def strip_bdist_dirname(props):
+        """ Strip dist from start of exe name """
+        return props.getProperty("bdist_file").split("\\")[-1]
+
+    factory.addStep(SetProperty(property='bdist_fname',
+                                value=strip_bdist_dirname))
     factory.addStep(
-        Trigger(schedulerNames=[py3_name],
+        Trigger(schedulerNames=[py3_sched_name],
                 updateSourceStamp=True,
-                set_properties={'bdist_file' : Property('bdist_file')}
+                set_properties={'bdist_fname' : Property('bdist_fname')}
             ))
     c['builders'].append(BuilderConfig(
         name=py2_name,
         slavenames=slavenames,
         factory=factory))
     # Make triggerable scheduler
-    sympy_py3_bdist = Triggerable(name=py3_name,
-                                  builderNames=[py3_name])
+    c['schedulers'].append(
+            Triggerable(name=py3_sched_name, builderNames=[py3_build_name]))
     # Make builder for Python 3 bdist test
     factory = BuildFactory()
     env, workdir = sympy_bot._make_virtualenv(factory,
-                                              'c:\Python32\python.exe')
+                                              'c:\Python33\python.exe')
     # Download bdist file
     factory.addStep(
         FileDownload(Interpolate(
             "public_html/" +
             sympy_bot.download_dir +
-            "/%(prop:bdist_file)s"),
-            Property('bdist_file'))
+            "/%(prop:bdist_fname)s"),
+            Property('bdist_fname'))
             )
     # easy_install bdist file into virtualenv
     factory.addStep(ShellCommand(
-        command=['easy_install', Property('bdist_file')],
+        command=['easy_install', Property('bdist_fname')],
         env=env))
     # pip install nose
     factory.addStep(ShellCommand(
@@ -1078,7 +1090,7 @@ for slavenames, bdist_suffix in (
         env=env,
         workdir=workdir))
     c['builders'].append(BuilderConfig(
-        name=py3_name,
+        name=py3_build_name,
         slavenames=slavenames,
         factory=factory))
 
