NF: make web hook scheduler run sympy builds
See script `master/contrib/post_build_request.py` in the buildbot repo.

Run sympy binary builds with:

    post_build_request.py --category=release --project=sympy \
        --repository=sympy --host=nipy.bic.berkeley.edu

adding `--revision=sympy-0.7.3` or similar to build a particular tag or sha1
commit.

--- a/master.cfg
+++ b/master.cfg
@@ -1393,10 +1393,11 @@ mn = mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
 c['status'].append(mn)
 
 # Allow builds to be triggered via the web forms
-release_filter = ChangeFilter(category="release")
-rel_sched = SingleBranchScheduler(name="Release",
-                                  change_filter=release_filter,
-                                  builderNames=['nibabel-py2.7-osx-10.8']
+sympy_release_filter = ChangeFilter(category="release", repository="sympy")
+rel_sched = SingleBranchScheduler(name="sympy-release",
+                                  change_filter=sympy_release_filter,
+                                  builderNames=['sympy-bdist32-27',
+                                                'sympy-bdist64-27']
                                  )
 c['schedulers'].append(rel_sched)
 
