RF: do release checks using virtualenv

--- a/master.cfg
+++ b/master.cfg
@@ -160,7 +160,8 @@ class GithubBot(object):
                  built_doc_src=None,
                  easy_depends=(), # careful with easy_install and system packages
                  pip_depends=(),
-                 doc_easy_depends=(), # careful with easy_install and system packages
+                 # careful with easy_install and system packages
+                 doc_easy_depends=(),
                  doc_pip_depends=('sphinx',),
                  src_subdir=None,
                  download_dir=None,
@@ -1107,29 +1108,39 @@ c['builders'] += statsmodels_bot.build_doc_builders(
     (('statsmodels-doc-builder', sparc_slaves_sid),))
 c['builders'] += pymvpa_bot.build_doc_builders(
     (('pymvpa-doc-builder', sparc_slaves_sid),))
+
 # pre-release builders
+def inplace_cmd_factory(bot, commands):
+    factory, env, workdir, buildir = bot._code_build_factory()
+    factory.addStep(ShellCommand(
+        ('python', 'setup.py', 'build_ext', '-i'),
+        env=env))
+    for cmd in commands:
+        factory.addStep(ShellCommand(cmd, env=env))
+    return factory
+
 c['builders'].append(BuilderConfig(
     name='nipy-release-checks',
     slavenames=['osx-10.6'],
-    factory=shell_cmd_factory(
-        'git://github.com/nipy/nipy.git',
-        ('make distclean',
-         'python -m compileall .',
-         'make sdist-tests',
-         'make bdist-egg-tests',
-         'make check-version-info',
-         'make check-files'))))
+    factory=inplace_cmd_factory(nipy_bot,
+        (('make', 'distclean'),
+         ('python', '-m', 'compileall' '.'),
+         ('make', 'sdist-tests'),
+         ('make', 'bdist-egg-tests'),
+         ('make', 'check-version-info'),
+         ('make', 'check-files'))
+                               )))
 c['builders'].append(BuilderConfig(
     name='dipy-release-checks',
     slavenames=['osx-10.6'],
-    factory=shell_cmd_factory(
-        'git://github.com/nipy/dipy.git',
-        ('make distclean',
-         'python -m compileall .',
-         'make sdist-tests',
-         'make bdist-egg-tests',
-         'make check-version-info',
-         'make check-files'))))
+    factory=inplace_cmd_factory(dipy_bot,
+        (('make', 'distclean'),
+         ('python', '-m', 'compileall' '.'),
+         ('make', 'sdist-tests'),
+         ('make', 'bdist-egg-tests'),
+         ('make', 'check-version-info'),
+         ('make', 'check-files'))
+                               )))
 # Example builders
 c['builders'].append(BuilderConfig(
     name='nipy-examples-2.6',
