BF: fix new inplace build command factory
I forgot that command was not the first argument to ShellCommand.

--- a/master.cfg
+++ b/master.cfg
@@ -1110,13 +1110,13 @@ c['builders'] += pymvpa_bot.build_doc_builders(
     (('pymvpa-doc-builder', sparc_slaves_sid),))
 
 # pre-release builders
-def inplace_cmd_factory(bot, commands):
-    factory, env, workdir, buildir = bot._code_build_factory()
+def inplace_cmd_factory(bot, commands, **kwargs):
+    factory, env, workdir, buildir = bot._code_build_factory(**kwargs)
     factory.addStep(ShellCommand(
-        ('python', 'setup.py', 'build_ext', '-i'),
+        command=('python', 'setup.py', 'build_ext', '-i'),
         env=env))
     for cmd in commands:
-        factory.addStep(ShellCommand(cmd, env=env))
+        factory.addStep(ShellCommand(command=cmd, env=env))
     return factory
 
 c['builders'].append(BuilderConfig(
@@ -1124,23 +1124,24 @@ c['builders'].append(BuilderConfig(
     slavenames=['osx-10.6'],
     factory=inplace_cmd_factory(nipy_bot,
         (('make', 'distclean'),
-         ('python', '-m', 'compileall' '.'),
+         ('python', '-m', 'compileall', '.'),
          ('make', 'sdist-tests'),
          ('make', 'bdist-egg-tests'),
          ('make', 'check-version-info'),
-         ('make', 'check-files'))
+         ('make', 'check-files')),
                                )))
 c['builders'].append(BuilderConfig(
     name='dipy-release-checks',
     slavenames=['osx-10.6'],
     factory=inplace_cmd_factory(dipy_bot,
         (('make', 'distclean'),
-         ('python', '-m', 'compileall' '.'),
+         ('python', '-m', 'compileall', '.'),
          ('make', 'sdist-tests'),
          ('make', 'bdist-egg-tests'),
          ('make', 'check-version-info'),
-         ('make', 'check-files'))
-                               )))
+         ('make', 'check-files')),
+        )))
+
 # Example builders
 c['builders'].append(BuilderConfig(
     name='nipy-examples-2.6',
