NF: add wheel binary builder mechanism

--- a/master.cfg
+++ b/master.cfg
@@ -375,26 +375,42 @@ class GithubBot(object):
                 command=[my_python, 'setup.py', 'bdist_egg'],
                 env=build_env,
                 workdir=build_workdir))
+            # Make a mpkg for good measure
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist_mpkg'],
                 env=build_env,
                 workdir=build_workdir))
-            factory.addStep(SetPropertyFromCommand(command=shlex.split(
-                'python bs_tools.py glob dist "*.egg"'),
-                property='bdist_file'))
+            installer = ['easy_install']
         elif bdist_type == 'exe':
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist', '--formats=wininst'],
                 env=build_env,
                 workdir=build_workdir))
-            factory.addStep(SetPropertyFromCommand(command=shlex.split(
-                'python bs_tools.py glob dist "*.exe"'),
-                property='bdist_file'))
+            installer = ['easy_install']
+        elif bdist_type == 'whl':
+            # Upgrade setuptools and pip if necessary
+            # Install bdist_wheel command
+            factory.addStep(ShellCommand(
+                command=[
+                    'pip', 'install', '-U',
+                    "pip>=1.4" "setuptools>=0.9" "wheel>=0.21"],
+                env=build_env,
+                workdir=build_workdir))
+            factory.addStep(ShellCommand(
+                command=[my_python, 'setup.py', 'bdist_wheel'],
+                env=build_env,
+                workdir=build_workdir))
+            installer = ['pip', 'install']
         else:
             raise ValueError('What is this?: ' + bdist_type)
+        # Find binary installer file
+        factory.addStep(SetPropertyFromCommand(
+            command=['python', 'bs_tools.py',
+                     'glob', 'dist' '*.' + bdist_type],
+            property='bdist_file'))
         # Install into virtualenv
         factory.addStep(ShellCommand(
-            command=[ 'easy_install', Interpolate('%(prop:bdist_file)s')],
+            command = installer + [Interpolate('%(prop:bdist_file)s')],
             env=env))
         # Test
         factory.addStep(
@@ -771,8 +787,10 @@ c['schedulers'] = [
     nipy_bot.nightly_scheduler(['nipy-bdist32-26'], 'exe-26', 2, 10, True),
     nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'exe-27', 2, 20, True),
     nipy_bot.nightly_scheduler(['nipy-bdist32-32'], 'exe-32', 2, 30, True),
-    nibabel_bot.nightly_scheduler(['nibabel-bdist32-26'],
-                                  'exe-26', 2, 40, True),
+    nibabel_bot.nightly_scheduler(['nibabel-bdist32-27'],
+                                  'exe-27', 2, 40, True),
+    nibabel_bot.nightly_scheduler(['nibabel-bdist32-27-whl'],
+                                  'whl-27', 2, 40, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-32'],
                                   'exe-32', 2, 50, True),
     # Windows 64 nightly builds
@@ -793,7 +811,7 @@ c['schedulers'] = [
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-3.3'], 'dipy-egg-33', 3, 30, True),
     # Sympy binary builders
     sympy_bot.nightly_scheduler(['sympy-bdist32-27'],
-                                  'exe-26', 5, 30, True),
+                                  'exe-27', 5, 30, True),
     sympy_bot.nightly_scheduler(['sympy-bdist64-27'],
                                   'exe64-27', 5, 30, True),
 ]
@@ -876,12 +894,20 @@ c['builders'] = []
 # nibabel exe builders
 nibabel_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest nibabel')
 c['builders'].append(BuilderConfig(
-    name='nibabel-bdist32-26',
+    name='nibabel-bdist32-27',
     slavenames=xp_32_slaves,
     factory=nibabel_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
-        python = r'c:\Python26\python.exe')
+        python = r'c:\Python27\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='nibabel-bdist32-27-whl',
+    slavenames=xp_32_slaves,
+    factory=nibabel_bot.bdist_factory(
+        'whl',
+        test_cmd = nibabel_test_cmd,
+        python = r'c:\Python27\python.exe')
 ))
 # The Python32 numpy 1.6.2 installation needs patching according to
 # git diff ad9c2f4~1..ad9c2f4
