--- a/master.cfg
+++ b/master.cfg
@@ -609,6 +609,10 @@ sympy_bot = GithubBot('sympy', 'sympy',
     doc_pip_depends = ('sphinx==1.1.3',),
     build_timeout = 2400, # allow for very slow sympy tests
 )
+# Numpy
+numpy_bot = GithubBot('numpy', 'numpy',
+    test_cmd = nptest_command('numpy', verbose=None)
+                     )
 
 ####### CHANGESOURCES
 
@@ -775,6 +779,11 @@ c['schedulers'] = [
                         ]),
     sympy_bot.scheduler([
                         'sympy-py2.6-32',
+                        ]),
+    numpy_bot.scheduler([
+                        'numpy-py2.7-osx-10.8',
+                        'numpy-py3.3-osx-10.8',
+                        'numpy-py2.6-osx-10.5-ppc',
                         ]),
     # Doc builds
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
@@ -1400,6 +1409,11 @@ c['builders'] += fail2ban_bot.build_builders(
 # Sympy
 c['builders'] += sympy_bot.build_builders(
     (('sympy-py2.6-32', linux_32_slaves),
+    ))
+c['builders'] += numpy_bot.build_builders(
+    (('numpy-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('numpy-py3.3-osx-10.8', osx_mountainlion_slaves),
+     ('numpy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
     ))
 
 # Assign all builders categories -- project names, to improve status visualizations
