Make sympy build at night

--- a/master.cfg
+++ b/master.cfg
@@ -617,7 +617,7 @@ numpy_bot = GithubBot('numpy', 'numpy',
 ####### CHANGESOURCES
 
 # the 'change_source' setting tells the buildmaster how it should find out
-# about source code changes.  Here we point to the buildbot clone of nibabel.
+# about source code changes.
 
 #TODO: We should probably change the GitPoller to a PBChangeSource to react to
 # commits http://buildbot.net/buildbot/docs/latest/manual/cfg-changesources.html#chsrc-PBChangeSource
@@ -777,9 +777,6 @@ c['schedulers'] = [
                         'sklearn-py2.6-wheezy-sparc',
                         #'sklearn-py3.x-wheezy-sparc',
                         ]),
-    sympy_bot.scheduler([
-                        'sympy-py2.6-32',
-                        ]),
     numpy_bot.scheduler([
                         'numpy-py2.7-osx-10.8',
                         'numpy-py3.3-osx-10.8',
@@ -818,6 +815,8 @@ c['schedulers'] = [
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.6'], 'dipy-egg-26', 3, 10, True),
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.7'], 'dipy-egg-27', 3, 20, True),
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-3.3'], 'dipy-egg-33', 3, 30, True),
+    # Sympy slow build at night
+    sympy_bot.nightly_scheduler(['sympy-py2.6-32'], 'sympy-slow', 2, 30, True),
     # Sympy binary builders
     sympy_bot.nightly_scheduler(['sympy-bdist32-27'],
                                   'exe-27', 5, 30, True),
