--- a/master.cfg
+++ b/master.cfg
@@ -390,12 +390,9 @@ class GithubBot(object):
         elif bdist_type == 'whl':
             # Upgrade setuptools and pip if necessary
             # Install bdist_wheel command
-            factory.addStep(ShellCommand(
-                command=[
-                    'pip', 'install', '-U',
-                    "pip>=1.4" "setuptools>=0.9" "wheel>=0.21"],
-                env=build_env,
-                workdir=build_workdir))
+            self._pip_install(factory,
+                    ("pip>=1.4", "setuptools>=0.9", "wheel>=0.21"),
+                    env)
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist_wheel'],
                 env=build_env,
@@ -611,7 +608,8 @@ sympy_bot = GithubBot('sympy', 'sympy',
 )
 # Numpy
 numpy_bot = GithubBot('numpy', 'numpy',
-    test_cmd = nptest_command('numpy', verbose=None)
+    test_cmd = nptest_command('numpy', verbose=None),
+    pip_depends = ('nose',),
                      )
 
 ####### CHANGESOURCES
