BF: fixes to wheel building

--- a/master.cfg
+++ b/master.cfg
@@ -391,8 +391,12 @@ class GithubBot(object):
             # Upgrade setuptools and pip if necessary
             # Install bdist_wheel command
             self._pip_install(factory,
-                    ("pip>=1.4", "setuptools>=0.9", "wheel>=0.21"),
+                    ("setuptools>=0.9", "wheel>=0.21"),
                     env)
+            # Can't install pip with pip because it can't delete itself
+            factory.addStep(ShellCommand(
+                command=['easy_install', '-U', 'pip'],
+                env=build_env))
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist_wheel'],
                 env=build_env,
@@ -403,7 +407,7 @@ class GithubBot(object):
         # Find binary installer file
         factory.addStep(SetPropertyFromCommand(
             command=['python', 'bs_tools.py',
-                     'glob', 'dist' '*.' + bdist_type],
+                     'glob', 'dist', '*.' + bdist_type],
             property='bdist_file'))
         # Install into virtualenv
         factory.addStep(ShellCommand(
