RF: upgrade pip in virtualenv for wheel installs
Upgrade pip / setuptools when installing virtualenv in order to be able to use
wheels for dependencies

--- a/master.cfg
+++ b/master.cfg
@@ -273,6 +273,16 @@ class GithubBot(object):
         # Set env, with virtualenv in front of the path
         env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
         workdir = Interpolate("%(prop:venv_dir)s")
+        # Upgrade setuptools and pip if necessary for wheel installs
+        # Can't install easy_install with easy_install because it can't delete
+        # itself
+        factory.addStep(ShellCommand(
+            command=['pip', 'install', '-U', 'setuptools'],
+            env=env))
+        # Can't install pip with pip because it can't delete itself
+        factory.addStep(ShellCommand(
+            command=['easy_install', '-U', 'pip>=1.4'],
+            env=env))
         return env, workdir
 
     def _code_build_factory(self,
@@ -388,15 +398,11 @@ class GithubBot(object):
                 workdir=build_workdir))
             installer = ['easy_install']
         elif bdist_type == 'whl':
-            # Upgrade setuptools and pip if necessary
             # Install bdist_wheel command
             self._pip_install(factory,
-                    ("setuptools>=0.9", "wheel>=0.21"),
-                    env)
-            # Can't install pip with pip because it can't delete itself
-            factory.addStep(ShellCommand(
-                command=['easy_install', '-U', 'pip'],
-                env=build_env))
+                    ("wheel>=0.21",),
+                    env=build_env)
+            # Make wheel
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist_wheel'],
                 env=build_env,
