RF: use setuptools bootstrap script to install setuptools
Running into version conflicts installing setuptools with pip.

--- a/master.cfg
+++ b/master.cfg
@@ -279,9 +279,14 @@ class GithubBot(object):
             command=['easy_install', '-U', 'pip>=1.4'],
             env=env))
         # Can't install easy_install with easy_install because it can't delete
-        # itself
+        # itself.  Use the bootstrap script to avoid version conflict problems
+        # from setuptools' nuclear path behavior.
         factory.addStep(ShellCommand(
-            command=['pip', 'install', '-U', 'setuptools'],
+            command = ['python', 'bs_tools.py', 'get-url',
+            'https://bitbucket.org/pypa/setuptools/raw/bootstrap/ez_setup.py',
+            'ez_setup.py']))
+        factory.addStep(ShellCommand(
+            command=['python', 'ez_setup.py'],
             env=env))
         return env, workdir
 
