--- a/master.cfg
+++ b/master.cfg
@@ -1200,15 +1200,18 @@ for bot in (nibabel_bot, nipy_bot, dipy_bot):
                 ('easy_install', '-U', project)):
             name_suff =  'py%s-%s' % (pyver, install_cmd[0])
             builder_name = '%s-%s' % (project, name_suff)
-            # need nose dev version for fix here:
+            # need nose dev version for fix to easy_install installations here:
             # https://github.com/nose-devs/nose/pull/661
             # When nose releases next version (after 1.3.0) can drop this
-            nose_suff = '==dev' if install_cmd[0] == 'easy_install' else ''
+            if install_cmd[0] == 'easy_install':
+                nose_target = 'git+git://github.com/nose-devs/nose.git'
+            else:
+                nose_target = 'nose'
             c['builders'] += bot.build_builders(
                 ((builder_name, osx_mountainlion_slaves),),
                 python='python' + pyver,
                 easy_depends = (), # Turn off dependency install
-                pip_depends = ('nose' + nose_suff,), # ditto
+                pip_depends = (nose_target,), # ditto
                 install_cmd = install_cmd,
                 install_wd = 'build/venv')
             c['schedulers'] += bot.nightly_scheduler(
