--- a/master.cfg
+++ b/master.cfg
@@ -646,6 +646,7 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                sklearn_bot,
                                                fail2ban_bot,
                                                sympy_bot,
+                                               numpy_bot,
                                                )]
 
 # pandas is too expensive to test and overwhelmes the sparc box, so
