BF: always use virtualenv for wheel building
Wheels can naturally be built in virtualenvs and it's cleaner to install the
`wheel` package into the virtualenv than require it in the system install.

--- a/master.cfg
+++ b/master.cfg
@@ -407,9 +407,9 @@ class GithubBot(object):
             self._pip_install(factory,
                     ("wheel>=0.21",),
                     env=build_env)
-            # Make wheel
+            # Make wheel - always use virtualenv python
             factory.addStep(ShellCommand(
-                command=[my_python, 'setup.py', 'bdist_wheel'],
+                command=['python', 'setup.py', 'bdist_wheel'],
                 env=build_env,
                 workdir=build_workdir))
             installer = ['pip', 'install']
