NF: add, use get-tail utility for stripping filenames

--- a/master.cfg
+++ b/master.cfg
@@ -1069,20 +1069,15 @@ for slavenames, bdist_suffix in (
     py2_name = 'sympy-bdist{0}-27'.format(bdist_suffix)
     py3_sched_name = 'sympy-bdist{0}-33-scheduler'.format(bdist_suffix)
     py3_build_name = 'sympy-bdist{0}-33-builder'.format(bdist_suffix)
-
     factory = sympy_bot.bdist_factory(
         'exe',
         test_cmd = sympy_test_cmd,
         pip_depends = pip_deps,
         python = r'c:\Python27\python.exe')
-
-    @properties.renderer
-    def strip_bdist_dirname(props):
-        """ Strip dist from start of exe name """
-        return props.getProperty("bdist_file").split("\\")[-1]
-
-    factory.addStep(SetProperty(property='bdist_fname',
-                                value=strip_bdist_dirname))
+    factory.addStep(
+            SetPropertyFromCommand(
+                command=['python', 'bs_tools.py', 'get-tail', Property('bdist_file')],
+                property='bdist_fname'))
     factory.addStep(
         Trigger(schedulerNames=[py3_sched_name],
                 updateSourceStamp=True,
