NF: add chained numpy wheel builder / testers

--- a/master.cfg
+++ b/master.cfg
@@ -834,6 +834,9 @@ c['schedulers'] = [
                                   'exe-27', 5, 30, True),
     sympy_bot.nightly_scheduler(['sympy-bdist64-27'],
                                   'exe64-27', 5, 30, True),
+    # Numpy binary builders
+    numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-2.7'], 'whl-27', 5, 30, True),
+    numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.3'], 'whl-33', 5, 30, True),
 ]
 
 # Some factories
@@ -1118,6 +1121,65 @@ for slavenames, bdist_suffix in (
     c['builders'].append(BuilderConfig(
         name=py3_build_name,
         slavenames=slavenames,
+        factory=factory))
+# Make numpy wheels on 10.9, test on 10.6
+building_slaves = osx_mountainlion_slaves
+testing_slaves = osx_snowleopard_slaves
+for python_bin, py_ver in (
+        ('python', '2.7'),
+        ('python3', '3.3')):
+    python_exe = '/Library/Frameworks/Python.framework/Versions/{0}/bin/{1}'.format(py_ver, python_bin)
+    builder_name = 'numpy-bdist-whl-osx-' + py_ver
+    tester_name = builder_name + '-downloaded'
+    test_scheduler_name = tester_name + '-scheduler'
+    factory = numpy_bot.bdist_factory('whl', python = python_exe)
+    factory.addStep(
+            SetPropertyFromCommand(
+                command=['python', 'bs_tools.py', 'get-tail', Property('bdist_file')],
+                property='bdist_fname'))
+    factory.addStep(
+        Trigger(schedulerNames=[test_scheduler_name],
+                updateSourceStamp=True,
+                set_properties={'bdist_fname' : Property('bdist_fname')}
+            ))
+    c['builders'].append(BuilderConfig(
+        name=builder_name,
+        slavenames=building_slaves,
+        factory=factory))
+    # Make triggerable scheduler
+    c['schedulers'].append(
+            Triggerable(name=test_scheduler_name, builderNames=[tester_name]))
+    # Make downloading builder for other osx version
+    factory = BuildFactory()
+    env, workdir = numpy_bot._make_virtualenv(factory, python_exe)
+    # Download bdist file
+    factory.addStep(
+        FileDownload(Interpolate(
+            "public_html/" +
+            numpy_bot.download_dir +
+            "/%(prop:bdist_fname)s"),
+            Property('bdist_fname'))
+            )
+    # Upgrade pip so it can use wheels
+    factory.addStep(ShellCommand(
+        command=['easy_install', '-U', 'pip'],
+        env=env))
+    # pip install bdist file into virtualenv
+    factory.addStep(ShellCommand(
+        command=['pip', 'install', Property('bdist_fname')],
+        env=env))
+    # pip install nose
+    factory.addStep(ShellCommand(
+        command=['pip', 'install', '--ignore-installed', 'nose'],
+        env=env))
+    # run tests
+    factory.addStep(ShellCommand(
+        command=numpy_bot.test_cmd,
+        env=env,
+        workdir=workdir))
+    c['builders'].append(BuilderConfig(
+        name=tester_name,
+        slavenames=testing_slaves,
         factory=factory))
 
 # Add nightly docs builders
