RF: make wheels be served as binary from webserver

--- a/master.cfg
+++ b/master.cfg
@@ -1555,3 +1555,4 @@ c['db_url'] = "sqlite:///state.sqlite"
 from twisted.web.static import File
 webdir = File("public_html")
 webdir.contentTypes['.egg'] = 'application/octet-stream'
+webdir.contentTypes['.whl'] = 'application/octet-stream'
