NF: add Python 3.4 envs for numpy.

--- a/master.cfg
+++ b/master.cfg
@@ -800,6 +800,7 @@ c['schedulers'] = [
     numpy_bot.scheduler([
                         'numpy-py2.7-osx-10.8',
                         'numpy-py3.3-osx-10.8',
+                        'numpy-py3.4-osx-10.8',
                         'numpy-py2.6-osx-10.5-ppc',
                         ]),
     # Doc builds
@@ -843,6 +844,7 @@ c['schedulers'] = [
     # Numpy binary builders
     numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-2.7'], 'whl-27', 5, 30, True),
     numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.3'], 'whl-33', 5, 30, True),
+    numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.4'], 'whl-34', 5, 30, True),
 ]
 
 # Some factories
@@ -1133,7 +1135,8 @@ building_slaves = osx_mountainlion_slaves
 testing_slaves = osx_snowleopard_slaves
 for python_bin, py_ver in (
         ('python', '2.7'),
-        ('python3', '3.3')):
+        ('python3', '3.3'),
+        ('python3', '3.4')):
     python_exe = '/Library/Frameworks/Python.framework/Versions/{0}/bin/{1}'.format(py_ver, python_bin)
     builder_name = 'numpy-bdist-whl-osx-' + py_ver
     tester_name = builder_name + '-downloaded'
@@ -1482,6 +1485,7 @@ c['builders'] += sympy_bot.build_builders(
 c['builders'] += numpy_bot.build_builders(
     (('numpy-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('numpy-py3.3-osx-10.8', osx_mountainlion_slaves),
+     ('numpy-py3.4-osx-10.8', osx_mountainlion_slaves),
      ('numpy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
     ))
 
