BF: missing comma in sequence of strings.

--- a/master.cfg
+++ b/master.cfg
@@ -700,7 +700,7 @@ c['schedulers'] = [
                         'nipy-py2.6-xp',
                         'nipy-py2.6-squeeze-sparc',
                         'nipy-py2.7-wheezy-sparc',
-                        'nipy-py2.x-sid-sparc'
+                        'nipy-py2.x-sid-sparc',
                         'nipy-py2.7-ppc',
                         'nipy-py2.6-arm',
                         'nipy-py2.7-fedora',
