--- a/master.cfg
+++ b/master.cfg
@@ -1,3 +1,4 @@
+# emacs: -*- mode: python; py-indent-offset: 4; indent-tabs-mode: nil -*-
 # ex: set syntax=python:
 # vim: ft=python
 # NIpy buildBOT Master Instance config
