ENH: allow to specify the test_dir to override jumping into venv workdir
Is done for in-source testing of Fail2Ban, for which setup was adjusted

--- a/master.cfg
+++ b/master.cfg
@@ -168,6 +168,7 @@ class GithubBot(object):
                  download_dir=None,
                  build_timeout=None,
                  test_env=None,
+                 test_dir=None,
                  ):
         # using easy_install on packages that are already in
         # system-site-packages causes the system path to get promoted above the
@@ -178,6 +179,7 @@ class GithubBot(object):
         self.git_url = "git://github.com/%s/%s.git" % (organization, repo)
         self.test_cmd = test_cmd
         self.test_env = test_env
+        self.test_dir = test_dir
         self.doc_build_cmd = doc_build_cmd
         self.built_doc_src = built_doc_src
         # Dependencies for install / test
@@ -328,6 +330,7 @@ class GithubBot(object):
                 pre_build_cmds=(),
                 post_cmds=(),
                 test_env=None,
+                test_dir=None,
                 install_cmd=('python', 'setup.py', 'install'),
                 install_wd=None
         ):
@@ -335,6 +338,8 @@ class GithubBot(object):
             test_cmd = self.test_cmd
         if test_env is None:
             test_env = self.test_env
+        if test_dir is None:
+            test_dir = self.test_dir
         factory, env, workdir, build_workdir = self._code_build_factory(
             python, easy_depends, pip_depends, pre_build_cmds)
         # Additional options for ShellCommands, if provided.  To not
@@ -347,16 +352,24 @@ class GithubBot(object):
         # Install into virtualenv
         if install_wd is None:
             install_wd = build_workdir
-        factory.addStep(ShellCommand(
-            command=install_cmd,
-            env=env,
-            workdir=install_wd,
-            **kwargs))
+        if install_cmd is not None:
+            factory.addStep(ShellCommand(
+                command=install_cmd,
+                env=env,
+                workdir=install_wd,
+                **kwargs))
         # Test
         if test_env:
             env = dict(env.items() + test_env.items())
+        if test_dir:
+           # allow for interpolations using known know variables
+           test_dir_env = {'workdir': workdir, 'build_workdir': build_workdir}
+           test_dir_env.update(env)
+           test_dir = test_dir % test_dir_env
+        else:
+            test_dir = workdir
         factory.addStep(ShellCommand(command=test_cmd,
-            env=env, workdir=workdir, **kwargs))
+            env=env, workdir=test_dir, **kwargs))
         for cmd in post_cmds:
             factory.addStep(ShellCommand(command=shlex.split(cmd, posix=True),
                                          env=env, workdir=workdir, **kwargs))
@@ -604,6 +617,7 @@ sklearn_bot = GithubBot('scikit-learn', 'scikit-learn',
 # Fail2Ban bot
 fail2ban_bot = GithubBot('fail2ban', 'fail2ban',
     test_cmd = shlex.split('./fail2ban-testcases'),
+    test_dir = './source/',
 )
 # Sympy
 sympy_bot = GithubBot('sympy', 'sympy',
@@ -1478,7 +1492,8 @@ c['builders'] += fail2ban_bot.build_builders(
      ('fail2ban-py2.7-ppc', debian_ppc_slaves),
      ('fail2ban-py2.6-arm', arm_slaves),
      # ('fail2ban-py2.7-win7', win7_64_slaves),
-    ))
+    ),
+    install_cmd=None)
 # Sympy
 c['builders'] += sympy_bot.build_builders(
     (('sympy-py2.6-32', linux_32_slaves),
