ENH: setup monitoring/building of multiple branches for Fail2Ban

--- a/master.cfg
+++ b/master.cfg
@@ -28,7 +28,8 @@ Scheduler must decide if it wants to react to a Change.  It generally does this
 by filtering changes to select changes it will act on.
 
 We use SingleBranchSchedulers for this.  These obviously respond only to
-changes in one branch of a repository.
+changes in one branch of a repository.  If .scheduler() provided with multiple
+branches, AnyBranchScheduler is used.
 
 A BuildSet is the association of (information about what changes need to be
 tested) and (Builders on which to test)
@@ -68,7 +69,7 @@ from buildbot.schedulers.forcesched import (ForceScheduler,
                                             FixedParameter,
                                             ChoiceStringParameter,
                                             StringParameter)
-from buildbot.schedulers.basic import SingleBranchScheduler
+from buildbot.schedulers.basic import SingleBranchScheduler, AnyBranchScheduler
 from buildbot.schedulers import timed
 from buildbot.schedulers.triggerable import Triggerable
 from buildbot.process.factory import BuildFactory
@@ -197,32 +198,41 @@ class GithubBot(object):
     def project(self):
         return "%s" % (self.repo,)
 
-    def poller(self, branch="master", interval=300):
-        return GitPoller(
+    def pollers(self, branches=["master"], interval=300):
+        return [GitPoller(
             self.git_url,
             project=self.project,
             category=self.project,
             workdir = "%s-%s-%s" % (self.organization, self.repo, branch),
             branch=branch,
             pollinterval=interval)
+            for branch in branches]
 
-    def scheduler(self, buildernames):
+    def scheduler(self, buildernames, branches=None):
         if isinstance(buildernames, basestring):
             buildernames = [buildernames]
         name = self.project
+        if branches is not None:
+            cf_kwargs = {'branch_fn': lambda branch: branch in branches}
+            Scheduler = AnyBranchScheduler
+        else:
+            cf_kwargs = {}
+            Scheduler = SingleBranchScheduler
         changefilter = ChangeFilter(repository=self.git_url,
                                     project=self.project,
-                                    category=self.project)
-        return SingleBranchScheduler(name=name,
-                                     change_filter=changefilter,
-                                     treeStableTimer=None,
-                                     builderNames=buildernames)
+                                    category=self.project,
+                                    **cf_kwargs)
+        return Scheduler(name=name,
+                         change_filter=changefilter,
+                         treeStableTimer=None,
+                         builderNames=buildernames)
 
     def nightly_scheduler(self,
                           buildernames,
                           name_suff,
                           hour = 2, minute = 23,
-                          ifchanged=True
+                          ifchanged=True,
+                          branch='master',
                          ):
         """ Make a timed scheduler for this repo """
         if isinstance(buildernames, basestring):
@@ -232,7 +242,7 @@ class GithubBot(object):
                                     project=self.project,
                                     category=self.project)
         return timed.Nightly(name=name,
-                branch="master",
+                branch=branch,
                 builderNames=buildernames,
                 change_filter=changefilter,
                 hour=hour,
@@ -649,7 +659,7 @@ numpy_bot = GithubBot('numpy', 'numpy',
 
 #TODO: We should probably change the GitPoller to a PBChangeSource to react to
 # commits http://buildbot.net/buildbot/docs/latest/manual/cfg-changesources.html#chsrc-PBChangeSource
-c['change_source'] = [bot.poller() for bot in (nibabel_bot,
+c['change_source'] = sum([bot.pollers() for bot in (nibabel_bot,
                                                nitime_bot,
                                                pyarbus_bot,
                                                nipy_bot,
@@ -662,15 +672,14 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                fail2ban_bot,
                                                sympy_bot,
                                                numpy_bot,
-                                               )]
+                                               )], [])   # flatten all pollers' lists into a single one
+# Additional branches
+c['change_source'] += fail2ban_bot.pollers(branches=['master', '0.8'])
 
 # pandas is too expensive to test and overwhelmes the sparc box, so
 # let's pull it much less frequently until figuring out how to
 # implement **correct** locking
-c['change_source'] += [bot.poller(interval=18000)
-                       for bot in (pandas_bot,)]
-
-pandas_bot,
+c['change_source'] += pandas_bot.pollers(interval=18000)
 
 
 ####### SCHEDULERS
@@ -804,7 +813,8 @@ c['schedulers'] = [
                         'fail2ban-py2.6-arm',
                         # needs more fixing
                         # 'fail2ban-py2.7-win7',
-                        ]),
+                        ],
+                        branches=['master', '0.8']),
     sklearn_bot.scheduler([
                         'sklearn-py2.x-sid-sparc',
                         # not yet
