BF: need to give every GitPoller a separate name per branch

--- a/master.cfg
+++ b/master.cfg
@@ -200,7 +200,7 @@ class GithubBot(object):
 
     def pollers(self, branches=["master"], interval=300):
         return [GitPoller(
-            self.git_url,
+            "%s|%s" % (self.git_url, branch),
             project=self.project,
             category=self.project,
             workdir = "%s-%s-%s" % (self.organization, self.repo, branch),
