BF: apparently GitPoller does accept multiple branches - reverting previous changes (should overcome problem with identical hashes of GitPollers)

--- a/master.cfg
+++ b/master.cfg
@@ -198,15 +198,14 @@ class GithubBot(object):
     def project(self):
         return "%s" % (self.repo,)
 
-    def pollers(self, branches=["master"], interval=300):
-        return [GitPoller(
-            "%s|%s" % (self.git_url, branch),
+    def poller(self, branches=["master"], interval=300):
+        return GitPoller(
+            self.git_url,
             project=self.project,
             category=self.project,
             workdir = "%s-%s-%s" % (self.organization, self.repo, branch),
-            branch=branch,
+            branches=branches,
             pollinterval=interval)
-            for branch in branches]
 
     def scheduler(self, buildernames, branches=None):
         if isinstance(buildernames, basestring):
@@ -659,7 +658,7 @@ numpy_bot = GithubBot('numpy', 'numpy',
 
 #TODO: We should probably change the GitPoller to a PBChangeSource to react to
 # commits http://buildbot.net/buildbot/docs/latest/manual/cfg-changesources.html#chsrc-PBChangeSource
-c['change_source'] = sum([bot.pollers() for bot in (nibabel_bot,
+c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                nitime_bot,
                                                pyarbus_bot,
                                                nipy_bot,
@@ -672,14 +671,14 @@ c['change_source'] = sum([bot.pollers() for bot in (nibabel_bot,
                                                fail2ban_bot,
                                                sympy_bot,
                                                numpy_bot,
-                                               )], [])   # flatten all pollers' lists into a single one
+                                               )]
 # Additional branches
-c['change_source'] += fail2ban_bot.pollers(branches=['master', '0.8'])
+c['change_source'] += [fail2ban_bot.poller(branches=['master', '0.8'])]
 
 # pandas is too expensive to test and overwhelmes the sparc box, so
 # let's pull it much less frequently until figuring out how to
 # implement **correct** locking
-c['change_source'] += pandas_bot.pollers(interval=18000)
+c['change_source'] += [pandas_bot.poller(interval=18000)]
 
 
 ####### SCHEDULERS
