BF: uff -- join multiple branches into a single name and sanitize possible slashes

--- a/master.cfg
+++ b/master.cfg
@@ -203,7 +203,7 @@ class GithubBot(object):
             self.git_url,
             project=self.project,
             category=self.project,
-            workdir = "%s-%s-%s" % (self.organization, self.repo, branch),
+            workdir = "%s-%s-%s" % (self.organization, self.repo, '_'.join(branches).replace('/', '+')),
             branches=branches,
             pollinterval=interval)
 
