neverendingstory -- apparently it should be under build/

--- a/master.cfg
+++ b/master.cfg
@@ -626,7 +626,7 @@ sklearn_bot = GithubBot('scikit-learn', 'scikit-learn',
 # Fail2Ban bot
 fail2ban_bot = GithubBot('fail2ban', 'fail2ban',
     test_cmd = shlex.split('./fail2ban-testcases'),
-    test_dir = './source/',
+    test_dir = './build/',
 )
 # Sympy
 sympy_bot = GithubBot('sympy', 'sympy',
